<resources>
    <string name="app_name">My Application</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Not log in yet</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cart">Cart</string>
    <string name="discount">Discount</string>

    <string name="txtSearch">Search</string>
    <string name="product">Product</string>
    <string name="sp">sp</string>
    <string name="bill_history">bill_history</string>
    <string name="view_all_bills_history">view_all_bills_history</string>
    <string name="no_more_bills_history">no_more_bills_history</string>
    <string name="no_more_notifications">no_more_notifications</string>
    <string name="details">Details</string>
    <string name="quantity">quantity</string>

    <string name="addSP">addSP</string>

    <string name="Customer_support">Customer_support</string>
</resources>