<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menubox"
        android:icon="@drawable/box"
        android:title=" " />




    <item
        android:id="@+id/menucustomer_support"
        android:icon="@drawable/customer_support"
        android:title="@string/Customer_support"
       />


    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/home"
        android:title="@string/home"
        />

    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications"
     />

    <item
        android:id="@+id/menu"
        android:icon="@drawable/menu"
        android:title="Menu"
  />

</menu>