<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_product_detail"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topNavbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFA000">

            <ImageButton
                android:id="@+id/btnBack_detail"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/arrow_back" />

            <TextView
                android:id="@+id/txtSearch_notification"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginVertical="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="20"
                android:ems="10"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/details"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/productImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/coe" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/productTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/product"
                            android:textColor="@color/theme_color"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/productStore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Store"
                            android:textColor="#0288D1"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:id="@+id/productStoreAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Store"
                            android:textColor="#0288D1"
                            android:textSize="14sp"
                            android:textStyle="italic" />

                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="Description"
                    android:textSize="18sp" />

                <ScrollView
                    android:id="@+id/svReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Review"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/productReview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btnAddCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/addSP"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#E64A19"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#9AFFA000"
                android:drawableStart="@drawable/add" />


        </LinearLayout>
    </LinearLayout>
</FrameLayout>